--- a/ci/docker/debian/Dockerfile
+++ b/ci/docker/debian/Dockerfile
@@ -5,7 +5,8 @@ FROM debian:unstable AS env
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
 RUN apt-get update -qq \
-&& apt-get install -yq git wget libssl-dev build-essential cmake \
+&& apt-get install -yq \
+ git wget libssl-dev build-essential cmake \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
