--- a/ci/vagrant/netbsd/Vagrantfile
+++ b/ci/vagrant/netbsd/Vagrantfile
@@ -13,7 +13,12 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   config.vm.guest = :netbsd
-  config.vm.box = "generic/netbsd9"
+  # config.vm.box = "generic/netbsd9"
+  # config.vm.box_version = "4.3.12"
+
+  config.vm.box = "NetBSD/NetBSD-9.1"
+  config.vm.box_version = "1.0.0"
+
   config.vm.provider "virtualbox" do |v|
     v.name = "ci_netbsd"
   end
@@ -48,9 +53,14 @@ Vagrant.configure("2") do |config|
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
-  #config.vm.synced_folder "../../..", "/home/vagrant/project"
-  config.vm.synced_folder ".", "/vagrant", id: "vagrant-root", disabled: true
+  # config.vm.synced_folder "../data", "/vagrant_data"
 
+  # Disable the default share of the current code directory. Doing this
+  # provides improved isolation between the vagrant box and your host
+  # by making sure your Vagrantfile isn't accessible to the vagrant box.
+  # If you use this you may want to enable additional shared subfolders as
+  # shown above.
+  config.vm.synced_folder ".", "/vagrant", disabled: true
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -73,12 +83,28 @@ Vagrant.configure("2") do |config|
   # note: clang installed by default
   config.vm.provision "env", type: "shell", inline:<<-SHELL
   set -x
-  pkg update -f
-  pkg install -y git cmake
+  pkgin upgrade
+  pkgin -y install git cmake
+  pkgin -y install mozilla-rootcerts-openssl
   SHELL
+
+  config.vm.provision "gcc14", type: "shell", inline:<<-SHELL
+  set -x
+  pkgin -y install gcc14
+  SHELL
+
+  # config.vm.provision "gcc14", type: "shell", inline:<<-SHELL
+  # set -x
+  # ftp ftp://ftp.NetBSD.org/pub/pkgsrc/pkgsrc-2024Q4/pkgsrc.tar.gz
+  # tar -xzf pkgsrc.tar.gz -C /usr
+  # ls /usr/pkgsrc/lang
+  # cd /usr/pkgsrc/lang/gcc14
+  # make install clean clean-depens -j4
+  # SHELL
 
   config.vm.provision "file", source: "../../../CMakeLists.txt", destination: "$HOME/project/"
   config.vm.provision "file", source: "../../../cmake", destination: "$HOME/project/"
+  config.vm.provision "file", source: "../../../patches", destination: "$HOME/project/"
   config.vm.provision "file", source: "../../../Foo", destination: "$HOME/project/"
   config.vm.provision "file", source: "../../../Bar", destination: "$HOME/project/"
   config.vm.provision "file", source: "../../../FooBar", destination: "$HOME/project/"
@@ -94,6 +120,8 @@ Vagrant.configure("2") do |config|
   config.vm.provision "configure", type: "shell", inline:<<-SHELL
   set -x
   cd project
+  export CC=/usr/pkg/gcc14/bin/gcc
+  export CXX=/usr/pkg/gcc14/bin/g++
   cmake -S. -Bbuild
   SHELL
 
