--- a/ci/vagrant/openbsd/Vagrantfile
+++ b/ci/vagrant/openbsd/Vagrantfile
@@ -13,7 +13,12 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   config.vm.guest = :openbsd
-  config.vm.box = "generic/openbsd7"
+  # config.vm.box = "generic/openbsd7" # OpenBSD 7.4
+  # config.vm.box_version = "4.3.12"
+
+  config.vm.box = "twingly/openbsd-7.6"
+  config.vm.box_version = "1.0.0"
+
   config.vm.provider "virtualbox" do |v|
     v.name = "ci_openbsd"
   end
@@ -48,9 +53,14 @@ Vagrant.configure("2") do |config|
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
-  #config.vm.synced_folder "../../..", "/home/vagrant/project"
-  config.vm.synced_folder ".", "/vagrant", id: "vagrant-root", disabled: true
+  # config.vm.synced_folder "../data", "/vagrant_data"
 
+  # Disable the default share of the current code directory. Doing this
+  # provides improved isolation between the vagrant box and your host
+  # by making sure your Vagrantfile isn't accessible to the vagrant box.
+  # If you use this you may want to enable additional shared subfolders as
+  # shown above.
+  # config.vm.synced_folder ".", "/vagrant", disabled: true
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -71,14 +81,23 @@ Vagrant.configure("2") do |config|
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
   # note: clang installed by default
+
+  # Vagrant provide a openBSD 7.4 box while only 7.6 and 7.7 are still
+  # maintained by openBSD -> older registry have been shutdown.
+  # config.vm.provision "env", type: "shell", inline:<<-SHELL
+  # set -x
+  # sysupgrade
+  # SHELL
+
   config.vm.provision "env", type: "shell", inline:<<-SHELL
   set -x
-  pkg update -f
-  pkg install -y git cmake
+  pkg_add -u
+  pkg_add git cmake
   SHELL
 
   config.vm.provision "file", source: "../../../CMakeLists.txt", destination: "$HOME/project/"
   config.vm.provision "file", source: "../../../cmake", destination: "$HOME/project/"
+  config.vm.provision "file", source: "../../../patches", destination: "$HOME/project/"
   config.vm.provision "file", source: "../../../Foo", destination: "$HOME/project/"
   config.vm.provision "file", source: "../../../Bar", destination: "$HOME/project/"
   config.vm.provision "file", source: "../../../FooBar", destination: "$HOME/project/"
