--- a/.github/workflows/amd64_macos_cmake.yml
+++ b/.github/workflows/amd64_macos_cmake.yml
@@ -18,7 +18,7 @@ jobs:
         ]
       fail-fast: false
     name: MacOS•CMake(${{matrix.cmake.name}})
-    runs-on: macos-13 # last macos intel based runner
+    runs-on: macos-15-intel
     steps:
       - uses: actions/checkout@v5
       - name: Check CMake
