--- a/.github/workflows/amd64_linux_cmake.yml
+++ b/.github/workflows/amd64_linux_cmake.yml
@@ -8,24 +8,53 @@ concurrency:
   cancel-in-progress: true
 
 # Building using the github runner environement directly.
+env:
+  CCACHE_BASEDIR: ${{github.workspace}}
+  CCACHE_DIR: ${{github.workspace}}/.ccache
+
 jobs:
   native:
     strategy:
       matrix:
         cmake: [
-          {generator: "Unix Makefiles", config: "Release"},
-          {generator: "Ninja", config: "Release"},
-          {generator: "Ninja Multi-Config", config: "Release"},
+          {name: "Make", generator: "Unix Makefiles", config: Release},
+          {name: "Ninja", generator: "Ninja", config: Release},
+          {name: "NinjaMulti", generator: "Ninja Multi-Config", config: Release},
         ]
       fail-fast: false
-    name: Linux•CMake(${{matrix.cmake.generator}})
+    name: amd64•Linux•CMake(${{matrix.cmake.name}})
     runs-on: ubuntu-latest
+    env:
+      deps_src_key: amd64_linux_deps_src
+      deps_build_key: amd64_linux_deps_build_${{matrix.cmake.name}}
+      ccache_key: amd64_linux_ccache_${{matrix.cmake.name}}
     steps:
       - uses: actions/checkout@v5
-      - name: Install Ninja
-        run: |
-          sudo apt-get update
-          sudo apt-get install ninja-build
+      - name: Install Dependencies
+        run: sudo apt install -y ninja-build ccache
+
+      # CONFIGURING CACHES
+      - name: Cache CMake dependency source code
+        uses: actions/cache@v4
+        with:
+          key: ${{env.deps_src_key}}-${{hashFiles('CMakeLists.txt', 'cmake/**')}}
+          path: ${{github.workspace}}/build/_deps/*-src
+      - name: Cache CMake dependency build
+        uses: actions/cache@v4
+        with:
+          key: ${{env.deps_build_key}}-${{hashFiles('CMakeLists.txt', 'cmake/**')}}
+          path: |
+            ${{github.workspace}}/build/_deps/*-build
+            ${{github.workspace}}/build/_deps/*-subbuild
+      - name: Cache CCache
+        uses: actions/cache@v4
+        with:
+          key: ${{env.ccache_key}}-${{github.sha}}
+          restore-keys: |
+            ${{env.ccache_key}}-${{github.sha}}
+            ${{env.ccache_key}}
+          path: ${{env.CCACHE_DIR}}
+
       - name: Check CMake
         run: cmake --version
       - name: Configure
@@ -53,6 +82,10 @@ jobs:
           --config ${{matrix.cmake.config}}
           --target install
           -v
+      - name: CCache stats and cleanup
+        run: |
+          ccache --show-stats
+          ccache --zero-stats
 
   amd64_linux_cmake:
     runs-on: ubuntu-latest
