--- a/.github/workflows/amd64_macos_cmake.yml
+++ b/.github/workflows/amd64_macos_cmake.yml
@@ -8,6 +8,10 @@ concurrency:
   cancel-in-progress: true
 
 # Building using the github runner environement directly.
+env:
+  CCACHE_BASEDIR: ${{github.workspace}}
+  CCACHE_DIR: ${{github.workspace}}/.ccache
+
 jobs:
   native:
     strategy:
@@ -17,10 +21,39 @@ jobs:
           {name: "Make", generator: "Unix Makefiles", config: Release, build_target: all, test_target: test, install_target: install},
         ]
       fail-fast: false
-    name: MacOS•CMake(${{matrix.cmake.name}})
+    name: amd64•MacOS•CMake(${{matrix.cmake.name}})
     runs-on: macos-15-intel
+    env:
+      deps_src_key: amd64_macos_deps_src
+      deps_build_key: amd64_macos_deps_build_${{matrix.cmake.name}}
+      ccache_key: amd64_macos_ccache_${{matrix.cmake.name}}
     steps:
       - uses: actions/checkout@v5
+      - name: Install Dependencies
+        run: brew install ccache
+
+      # CONFIGURING CACHES
+      - name: Cache CMake dependency source code
+        uses: actions/cache@v4
+        with:
+          key: ${{env.deps_src_key}}-${{hashFiles('CMakeLists.txt', 'cmake/**')}}
+          path: ${{github.workspace}}/build/_deps/*-src
+      - name: Cache CMake dependency build
+        uses: actions/cache@v4
+        with:
+          key: ${{env.deps_build_key}}-${{hashFiles('CMakeLists.txt', 'cmake/**')}}
+          path: |
+            ${{github.workspace}}/build/_deps/*-build
+            ${{github.workspace}}/build/_deps/*-subbuild
+      - name: Cache CCache
+        uses: actions/cache@v4
+        with:
+          key: ${{env.ccache_key}}-${{github.sha}}
+          restore-keys: |
+            ${{env.ccache_key}}-${{github.sha}}
+            ${{env.ccache_key}}
+          path: ${{env.CCACHE_DIR}}
+
       - name: Check CMake
         run: cmake --version
       - name: Configure
@@ -48,6 +81,10 @@ jobs:
           --config ${{matrix.cmake.config}}
           --target ${{matrix.cmake.install_target}}
           -v
+      - name: CCache stats and cleanup
+        run: |
+          ccache --show-stats
+          ccache --zero-stats
 
   amd64_macos_cmake:
     runs-on: ubuntu-latest
