--- a/.github/workflows/arm64_docker_cmake.yml
+++ b/.github/workflows/arm64_docker_cmake.yml
@@ -22,11 +22,9 @@ jobs:
         ]
       fail-fast: false
     name: arm64•${{matrix.distro}}•CMake
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     steps:
       - uses: actions/checkout@v5
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
       - name: Check docker
         run: |
           docker info
